# broadcastmix

./: .gitignore  CMakeLists.txt  README.md  notes.md  roadmap.md  run_app.sh
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/BroadcastMixApp/: Main.cpp  MainComponent.cpp  MainComponent.h  NodeGraphComponent.cpp  NodeGraphComponent.h  NodeLibraryComponent.cpp  NodeLibraryComponent.h
cmake/: Dependencies.cmake
projects/SampleService.broadcastmix/: graph.json
projects/SampleService.broadcastmix/snapshots/: Service Default.json  index.json
scripts/: check_toolchain.sh
specifications/: Broadcast Mix UI Feel Tone Direction.md  BroadcastMix v3 Specification.md
src/: CMakeLists.txt
src/audio/: AudioEngine.cpp  AudioEngine.h  GraphNode.cpp  GraphNode.h  GraphTopology.cpp  GraphTopology.h  JuceGraphBuilder.cpp  JuceGraphBuilder.h  MeterStore.cpp  MeterStore.h
src/audio/processors/: GainProcessor.cpp  GainProcessor.h  PassThroughProcessor.cpp  PassThroughProcessor.h  SignalGeneratorProcessor.cpp  SignalGeneratorProcessor.h
src/control/: ControlSurfaceManager.cpp  ControlSurfaceManager.h
src/core/: Application.cpp  Application.h  Logging.cpp  Logging.h
src/persistence/: ProjectSerializer.cpp  ProjectSerializer.h
src/plugins/: PluginHost.cpp  PluginHost.h
src/ui/: NodeGraphView.cpp  NodeGraphView.h  UiTheme.cpp  UiTheme.h
src/update/: UpdateService.cpp  UpdateService.h
tests/: CMakeLists.txt  test_main.cpp
